// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TimeSlot Component should render available AM times correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <TimeSlot
    available={true}
    clickHandler={[Function]}
    time={10}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <button
        disabled={false}
        onClick={[Function]}
      >
        10
        :00 
        AM
      </button>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          10,
          ":00 ",
          "AM",
        ],
        "disabled": false,
        "onClick": [Function],
      },
      "ref": null,
      "rendered": Array [
        10,
        ":00 ",
        "AM",
      ],
      "type": "button",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <button
          disabled={false}
          onClick={[Function]}
        >
          10
          :00 
          AM
        </button>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            10,
            ":00 ",
            "AM",
          ],
          "disabled": false,
          "onClick": [Function],
        },
        "ref": null,
        "rendered": Array [
          10,
          ":00 ",
          "AM",
        ],
        "type": "button",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`TimeSlot Component should render available PM times correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <TimeSlot
    available={true}
    clickHandler={[Function]}
    time={17}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <button
        disabled={false}
        onClick={[Function]}
      >
        5
        :00 
        PM
      </button>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          5,
          ":00 ",
          "PM",
        ],
        "disabled": false,
        "onClick": [Function],
      },
      "ref": null,
      "rendered": Array [
        5,
        ":00 ",
        "PM",
      ],
      "type": "button",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <button
          disabled={false}
          onClick={[Function]}
        >
          5
          :00 
          PM
        </button>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            5,
            ":00 ",
            "PM",
          ],
          "disabled": false,
          "onClick": [Function],
        },
        "ref": null,
        "rendered": Array [
          5,
          ":00 ",
          "PM",
        ],
        "type": "button",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`TimeSlot Component should render unavailable times correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <TimeSlot
    available={false}
    clickHandler={[Function]}
    time={17}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <button
        disabled={true}
        onClick={[Function]}
      >
        5
        :00 
        PM
      </button>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          5,
          ":00 ",
          "PM",
        ],
        "disabled": true,
        "onClick": [Function],
      },
      "ref": null,
      "rendered": Array [
        5,
        ":00 ",
        "PM",
      ],
      "type": "button",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <button
          disabled={true}
          onClick={[Function]}
        >
          5
          :00 
          PM
        </button>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            5,
            ":00 ",
            "PM",
          ],
          "disabled": true,
          "onClick": [Function],
        },
        "ref": null,
        "rendered": Array [
          5,
          ":00 ",
          "PM",
        ],
        "type": "button",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
